[project]
name = "hi_dohyun"
version = "0.7.1"
description = "Default template for PDM package"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
hi-dohyun = "hi_dohyun.hello:hi"

[tool.pdm]
distribution = true
